tests/error/error03.sml
val prog =
  PROGRAM
    {classes=[],decls=[],funcs=[("f",{body=[],decls=[],params=[]})],
     stmts=[ST_PRINT {exp=EXP_DOT {field="x",obj=EXP_ID "f"}}]} : program
;
